@@ -38,7 +38,7 @@ if (!$gallery) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = "1.2.2-b4";
+$gallery->version = "1.2.2-b5";
 $gallery->config_version = 23;
 $gallery->album_version = 4;
 $gallery->url = "http://gallery.sourceforge.net";
