@@ -1,3 +1,11 @@
+2001-10-26  Bharat Mediratta  <bharat@menalto.com> (1.2.2-cvs-b5)
+
+	* Fixed bug #475151: Album link always goes to page 1.  We now track
+	  the most recently viewed page of each album in the session and return
+	  to that page.  
+
+	* (chris) Changed the vertical alignment of the caption for clarity.
+
 2001-10-16  Bharat Mediratta  <bharat@menalto.com> (1.2.2-cvs-b4)
 
 	* platform/fs_win32: fixed a bug where we were using a form of of 
